--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,18 +61,18 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #000;
-$background-color           : #000;
+$body-color                 : #fff;
+$background-color           : #fff;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
-$text-color                 : $fff;
+$text-color                 : $dark-gray;
 $border-color               : $lighter-gray;
 
-$primary-color              : #000;
+$primary-color              : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #2f7f93;
+$info-color                 : #236070;
 
 /* brands */
 $behance-color              : #1769FF;
