--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -63,7 +63,7 @@
 }
 
 .tile:hover {
-  background-color: #ffffff;
+  background-color: #333333;
   transform: scale(1.05);
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
 }
@@ -106,8 +106,8 @@ table td {
 }
 
 table th {
-  background-color: ##7A798A;
-  color: #853d63;
+  background-color: #1e1e1e;
+  color: #ffffff;
 }
 
 .skills-grid,
