--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -63,7 +63,7 @@ $body-color                 : #000;
 $background-color           : #000;
 $code-background-color      : #050505;
 $code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
+$text-color                 : #fff;
 $border-color               : $lighter-gray;
 
 $primary-color              : #000000;
