--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,7 +17,7 @@
 
 @import "reset";
 @import "base";
-@import "_sass/_variables";
+@import "variables";
 @import "utilities";
 @import "animations";
 @import "tables";
