--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,12 +11,13 @@
 */
 
 @import "vendor/breakpoint/breakpoint"; // media query mixins
+@import "variables";
 @import "mixins";
 @import "vendor/susy/susy";
 
 @import "reset";
 @import "base";
-@import "variables";
+
 @import "utilities";
 @import "animations";
 @import "tables";
@@ -62,10 +63,9 @@
 }
 
 .tile:hover {
-  background-color: ##cf98bb;
+  background-color: #ffffff;
   transform: scale(1.05);
-  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2)
-  color: #fff;
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.2);
 }
 
 .tile img {
