--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -83,7 +83,7 @@
       line-height: 1.5;
       text-align: center;
       text-decoration: none;
-      color: mix(#000, $gray, 25%);
+      color: $text-color;
       border: 1px solid $light-gray;
       border-radius: 0;
 
