--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -100,7 +100,7 @@ $xing-color                 : #006567;
 
 /* links */
 $link-color                 : $info-color;
-$link-color-hover           : mix(#fff, $link-color, 25%);
+$link-color-hover           : #cf98bb;
 $link-color-visited         : mix(#000, $link-color, 25%);
 $masthead-link-color        : $primary-color;
 $masthead-link-color-hover  : mix(#fff, $primary-color, 25%);
