--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -88,7 +88,7 @@
       border-radius: 0;
 
       &:hover {
-        color: $link-color-hover;
+        color: #fff;
       }
 
       &.current {
@@ -136,7 +136,7 @@
     border-radius: $border-radius;
 
     &:hover {
-      color: $link-color-hover;
+      color: #fff;
     }
 
     &:first-child {
