--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,15 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E54SYZMB57"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-E54SYZMB57');
+    </script>
   </head>
 
   <body>
@@ -26,7 +35,6 @@ layout: compress
     </div>
 
     {% include scripts.html %}
-  <script src="{{ '/assets/js/theme-toggle.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/theme-toggle.js' | relative_url }}"></script>
   </body>
 </html>
-
